removed z-index from #contact-bg styling correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,6 @@ main {
     position: absolute;
     width: 100%;
     min-height: 100%;
-    z-index: -1;
 }
 
 /*Styling for contact form*/
